# android-agent-link

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  settings.gradle.kts
.github/workflows/: android-build-apk.yml  python-pr-prechecks.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/gongpx/androidacpclient/: MainActivity.kt
app/src/main/java/com/gongpx/androidacpclient/data/bridge/: BridgeClient.kt
app/src/main/java/com/gongpx/androidacpclient/data/model/: AgentPlan.kt  Models.kt  PromptQueueState.kt
app/src/main/java/com/gongpx/androidacpclient/data/notification/: ChatCompletionPolicy.kt
app/src/main/java/com/gongpx/androidacpclient/data/store/: AppSettingsStore.kt  ChatStore.kt
app/src/main/java/com/gongpx/androidacpclient/data/update/: UpdateClient.kt
app/src/main/java/com/gongpx/androidacpclient/ui/: AndroidAcpClientApp.kt
app/src/main/res/drawable/: ic_agentlink.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/gongpx/androidacpclient/data/model/: AgentPlanTest.kt  PromptQueueStateTest.kt
bridge/: README.md  pyproject.toml  run.py
bridge/src/android_acp_bridge/: __init__.py  acp_agent.py  config.py  devtunnel.py  main.py  pairing.py  runtime.py  server.py  stdlib_server.py  tailscale.py
bridge/tests/: test_acp_agent.py  test_devtunnel.py  test_pairing.py  test_runtime.py  test_tailscale.py
docs/: README.md  acp-bridge-contract.md  android-app.md  architecture.md  harness-engineering.md  machine-pairing.md  product-requirements.md
gradle/: libs.versions.toml
(+1 files in other folders)
