[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "android-acp-bridge"
version = "0.1.0"
description = "Remote bridge for AgentLink"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "qrcode>=8.0,<9.0"
]

[project.optional-dependencies]
fastapi = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[project.scripts]
android-acp-bridge = "android_acp_bridge.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/android_acp_bridge"]
